--- a/paginas/ancora.html
+++ b/paginas/ancora.html
@@ -48,6 +48,7 @@
                 <li>css</li>
 
                 <li>estudar pyton</li>
+                <LI> oq faazer sobre a DIO</LI>
 
 
             </ul>
